Changes for 1.2.2.1
* Fix bug (2955224) Low Luck casualties not being taken (ComradeKev)

* Fix bug (2951839) reporting that non-blitzed neutrals are charging fee, causing dumps (ComradeKev)

* Fix bug (2951882) amphib units being ignored (ComradeKev)

* increase max java memory to 256m (sgb)

* new icon for triplea.exe (ubernaut)

Changes for 1.2.2

* update flag images in the base flags folder (u-boat,Veqryn)

* allow flag images to be gif or png, gif's will be preferred if both are available to prevent new images in the base folder from overriding images in mods (sgb)

* Fix null pointer in new AA dice rolling code (ComradeKev)

* Add default AI setting for 'Neutral' players (ComradeKev)
 
* Fix bug related to paratroops and blitzing tank movement (ComradeKev)

* Fix bug (2947241) combined land/amphib blitz with associated sea battle throws exception (ComradeKev)
 
* Add additional unit png files to most base/images/units folders (ComradeKev)

* Fix bug (2945150) 'Neutrals Are Impassable' only valid for aircraft (ComradeKev)

* Fix bug (2943002) AA firing rules with and without low luck (ComradeKev)

* Fix bug (294300) Victory Conditions tweaked (ComradeKev)

* Check 'Allied Air Dependents' property to see if allied air can participate in attack (ComradeKev)

* Fix bug (2936271) Bombers allowed to continue to more battles after dropping (blitzing) paratroops (ComradeKev)
 
* Fix bug (2939602) Allied fighters on attacking carriers (ComradeKev)

* Fix bug (2939915) by tweaking route finding logic (ComradeKev)

* Fix bug (2938275) AA on trns firing at passing aircraft (ComradeKev)

* Change 'No Economic Victory' game property to 'Economic Victory' (ComradeKev)

* Fix displayed Victory City victory message (ComradeKev)

* Fix null pointer if trying to select factory in edit mode (ComradeKev)

* Update NWO map to version 1.7.2 (OnanTheBrBr)

* Fix bug (2933998) null pointer in MoreNAble IA Non Combat movement through sea zones (ComradeKev)
