@@ -1,4 +1,8 @@
 Changes for 1.2.2.1
+* Patch bug () Dump in EasyAI non-combat movement (ComradeKev)
+
+* Patch bug (2953997) Dump in StrongAI non-combat movement (ComradeKev)
+
 * Fix bug (2955224) Low Luck casualties not being taken (ComradeKev)
 
 * Fix bug (2951839) reporting that non-blitzed neutrals are charging fee, causing dumps (ComradeKev)
